# fortran

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  argument_pass.f90  check_working_dir.f90  code_timing.f90  compare_strings.f90  constructor_destructor.f90  pointer_assignment.f90  string_literals.f90  timestamp.f90  tokenize_file.f90  use_pointer.f90
run/compare_strings/: test.nml
run/tokenize_file/: taylorGreen.input  val.txt
